@@ -443,3 +443,5 @@
   swissSolaris.
 - Fixed crashbug on /rehash due to config rewrite, also made DEBUGMODE working again.
   Probably more fixes to come (small or not)...
+- Removed an excess space from the SAMODE notice when a mode without a parameter was set
+  (#0002134) reported by Bugz.
